# lazy-bracket

./: CHANGELOG.md  README.md  lazy-bracket.cabal  shell.nix
lib/: LazyBracket.hs
test/: doctests.hs  tests.hs
